frontend/test/should_pass/bitbucket26.gm
package tst {
        node class Test {
            a:string;
            function toText() : string {
                return("ASD");
            }
        }
}
