frontend/test/should_fail/computations_no_proc_methodb.gm
node class N
{
	function bar() : int
	{
		add(Node);
		return(42);
	}
}
